@@ -21,8 +21,9 @@ ilCreateSubImage
 ilDefaultImage
 ilDeleteImage
 ilDeleteImages
-ilDetermineType ; added 2003-09-17
+ilDetermineType
 ilDetermineTypeF
+ilDetermineTypeL
 ilDisable
 ilEnable
 ilFormatFunc
